@@ -50,7 +50,7 @@ typedef enum {	//AA Effect IDs
 	aaEffectFrostArrows,
 	aaEffectWarcry,
 	aaEffectLeechTouch,
-	aaEffectProjectIllusion // seveian 2008-09-23
+	aaEffectProjectIllusion // unused - Handled via spell effect
 } aaEffectType;
 
 
